# for-all

./: .gitignore  Makefile  Makefile.am  README  README.md  build-home.sh  build.sh  configure.ac  for-all.c  for-all.pod  lists.c  lists.h  make-README.sh  run-command.c  run-command.h
.github/workflows/: codeql.yml
man/: Makefile  Makefile.am  for-all.pod
src/: Makefile  Makefile.am  VERSION-GEN  for-all.c  for-all.h  lists.c  lists.h  make-version.sh  options.h  run-command.c  utils.h
